DragonSaddleSizeEstimator.java: replace new Double() by Double.valueOf(UNIVERSAL_LUCKY_NUMBER) in method calculateSaddleSizeFromYear(), because deprecated sonce version9